@@ -1,8 +1,10 @@
 DIST Module-Build-0.30.tar.gz 195650 RMD160 f3543567fe587b92311681c7cb2906625f59e045 SHA1 e75372cfe0cfad0b1897ea1f6606961a8f09bc1b SHA256 31b8f923993cfc0f3e95e0376ee4af3fbdf737d258f7d377aa14c9fee1e3f65b
 DIST Module-Build-0.31.tar.gz 207913 RMD160 7183e027a799f1d91dc294b146f92153adf13d02 SHA1 8bfb8585c78f1afd3fbbe0f32cdf70ac0c1df624 SHA256 e2f723be8d6c70b4ddbca3b5e32e52e6e98eae8f43e34d7ede87efcb1796bbb5
 DIST Module-Build-0.31012.tar.gz 205507 RMD160 d4eb2c802666b04947ad577a70094008857e53c0 SHA1 b3ecd98de96413a0795e0aeecffac58995d7cf7c SHA256 396f8c4b87ae3e0c6a3d73563370791674df107911ac62be4e41fa5caa2ef2c4
+DIST Module-Build-0.32.tar.gz 207293 RMD160 72e4dd9bf4a136f21c18d3ac9209d4f13038a8b4 SHA1 b489a1dc5547f14166d0cf4c8f974a3e152aa76c SHA256 5ccf734b79ef90289b40b1af3507facdc35c11fcb111f0c90f9dc17350427d02
 EBUILD Module-Build-0.30.ebuild 1001 RMD160 fe0cde89611c0403d16c9316211de0c568c0e5c4 SHA1 fe1f8f838f718611964e31b34abc34500307d33b SHA256 812ea8f07f505d63d778715eab4f4b9b6b3c7c405ae112526790fbae3a9d0a4c
 EBUILD Module-Build-0.31.012.ebuild 973 RMD160 6b1aab984cf1039950ac044018e7255760a089d2 SHA1 8a367ab896950343530ba179f75c30b60cc1f4dd SHA256 3600aa5f3ca15d6182d607061a68daf90df74a5f7024a5684612ed876d87fff8
 EBUILD Module-Build-0.31.ebuild 1013 RMD160 64fd55cc05ed67bc78177c354280f295247d76b2 SHA1 52f464a51cc05cd3c0dd1a5e714dc36899cee236 SHA256 263cab6d825a734978c56e88a77631985f79f1864b951931e11281d5d6b0d66e
-MISC ChangeLog 11153 RMD160 a0bcab229f5b8ae17bf4f7f26829682769fb23ba SHA1 34600b9750d74acc1124762316dcaac0bf64ee12 SHA256 b06021de279a3ee41bbd0a599712e52e0db7073fffb692e197757f5659f41636
+EBUILD Module-Build-0.32.ebuild 1003 RMD160 be71e24b0002bd1b8d699b2bbcebcd2fe6323189 SHA1 d633f47e2f17003f4eae35815698dce4246e5dfa SHA256 3d99c34a8af8a56548dfbc9eed81f6b6532ffe71c259dc3ae3fe8759e2a95c9d
+MISC ChangeLog 11278 RMD160 c1211f5477a26ce4b1f2755529c585c353df0456 SHA1 65de7a20b5372eb4f46a0baf350e494d9a47c9d6 SHA256 ceb2eb4d21661928afb86c19fc15f80a0b4ad1b07d816ba77642a772e6177f55
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
