@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Module-Build
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Build/ChangeLog,v 1.6 2009/01/14 14:31:44 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Module-Build/ChangeLog,v 1.7 2009/02/26 11:34:58 tove Exp $
+
+*Module-Build-0.32 (26 Feb 2009)
+
+  26 Feb 2009; Torsten Veller <tove@gentoo.org> +Module-Build-0.32.ebuild:
+  Version bump
 
 *Module-Build-0.31.012 (14 Jan 2009)
 
